--- a/gtk-4.0/widgets/_scales.scss
+++ b/gtk-4.0/widgets/_scales.scss
@@ -1,7 +1,7 @@
 /************
  * GtkScale *
  ************/
-%scale_trough {
+ %scale_trough {
   background-color: $scale_bg;
   border: none;
   border-radius: 3px;
@@ -40,7 +40,7 @@
 
 scale {
   // sizing
-  $_marks_lenght: 6px;
+  $_marks_length: 6px;
   $_marks_distance: 6px;
 
   min-height: 16px;
@@ -178,53 +178,117 @@ scale {
     // ...on selected list rows
     row:selected & { &:disabled, & { border-color: $selected_borders_color; } }
 
-   
+    // OSD
+    .osd & {
+      @include button(osd);
+      border-color: darken($osd_borders_color, 3%);
+      background-color: opacify($_scale_bg, 1); // solid background needed here
+
+      &:hover {
+        @include button(osd-hover);
+        background-color: opacify($_scale_bg, 1); // solid background needed here
+      }
+
+      &:active {
+        @include button(osd-active);
+        background-color: opacify($_scale_bg, 1); // solid background needed here
+      }
+
+      &:disabled {
+        @include button(osd-insensitive);
+        background-color: opacify($_scale_bg, 1); // solid background needed here
+      }
+
+      &:backdrop {
+        @include button(osd-backdrop, $_scale_disabled_bg);
+        background-color: opacify($_scale_disabled_bg, 1); // solid background needed here
+
+        &:disabled {
+          @include button(osd-backdrop-insensitive);
+          background-color: opacify($_scale_bg, 1); // solid background needed here
+        }
+      }
+    }
   }
 
   value { color: gtkalpha(currentColor, 0.4); }
 
-  marks {
-    color: gtkalpha(currentColor, 0.4);
+  &.horizontal {
+    > marks {
+      color: gtkalpha(currentColor, 0.55);
+      &.top    { margin-bottom: $_marks_distance; }
+      &.bottom { margin-top: $_marks_distance; }
 
-    @each $marks_class, $marks_pos, $marks_margin in (top, top, bottom),
-                                                     (bottom, bottom, top),
-                                                     (top, left, right),
-                                                     (bottom, right, left) {
-      &.#{$marks_class} {
-        margin-#{$marks_margin}: $_marks_distance;
-        margin-#{$marks_pos}: -($_marks_distance + $_marks_lenght);
+      indicator {
+        background-color: currentColor;
+        min-height: $_marks_length;
+        min-width: 1px;
       }
+    }
+
+    > value.left  { margin-right: 9px; }
+    > value.right { margin-left: 9px; }
+
+    &.fine-tune >marks {
+      &.top { margin-top: 3px; }
+      &.bottom { margin-bottom: 3px; }
+
+      indicator { min-height: ($_marks_length - 3px); }
     }
   }
 
-  &.fine-tune marks {
-    @each $marks_class, $marks_pos, $marks_margin in (top, top, bottom),
-                                                     (bottom, bottom, top),
-                                                     (top, left, right),
-                                                     (bottom, right, left) {
-      &.#{$marks_class} {
-        margin-#{$marks_margin}: $_marks_distance;
-        margin-#{$marks_pos}: -($_marks_distance + $_marks_lenght - 3px);
+  &.vertical {
+    > marks {
+      color: gtkalpha(currentColor, 0.55);
+      &.top    { margin-right: $_marks_distance; }
+      &.bottom { margin-left: $_marks_distance; }
+
+      indicator {
+        background-color: currentColor;
+        min-height: 1px;
+        min-width: $_marks_length;
       }
     }
+
+    > value.top    { margin-bottom: 9px; }
+    > value.bottom { margin-top: 9px; }
+
+    &.fine-tune >marks {
+      &.top { margin-left: 3px; }
+      &.bottom { margin-right: 3px; }
+
+      indicator { min-height: ($_marks_length - 3px); }
+    }
   }
+
+  // &.fine-tune marks {
+  //   @each $marks_class, $marks_pos, $marks_margin in (top, top, bottom),
+  //                                                    (bottom, bottom, top),
+  //                                                    (top, left, right),
+  //                                                    (bottom, right, left) {
+  //     &.#{$marks_class} {
+  //       margin-#{$marks_margin}: $_marks_distance;
+  //       margin-#{$marks_pos}: -($_marks_distance + $_marks_length - 3px);
+  //     }
+  //   }
+  // }
 
   &.horizontal {
     indicator {
-      min-height: $_marks_lenght;
+      min-height: $_marks_length;
       min-width: 1px;
     }
 
-    &.fine-tune indicator { min-height: ($_marks_lenght - 3px); }
+    &.fine-tune indicator { min-height: ($_marks_length - 3px); }
   }
 
   &.vertical {
     indicator {
       min-height: 1px;
-      min-width: $_marks_lenght;
+      min-width: $_marks_length;
     }
 
-    &.fine-tune indicator { min-width: ($_marks_lenght - 3px); }
+    &.fine-tune indicator { min-width: ($_marks_length - 3px); }
   }
 
   // *WARNING* scale with marks madness following
